fixed some minor issues in reportsbyparam endpoint
